added configurable per-field auto-filtering (non-CMS); refs #19418